Add Umami analytics tracking

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       name="twitter:description"
       content="The trust layer for audio in the AI era. Embed proof at creation, verify anywhere."
     />
+    
+    <!-- Umami Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="7273b35e-cb12-47eb-a78d-188ce3139039"></script>
   </head>
 
   <body>
